# ChatBox

./: .gitignore  App.js  Dockerfile  Login.js  OllamaBackend.py  README.md  docker-compose.yml  guniserver.py  index.html  pyproject.toml  requirements.txt  server.py
React/CSS/: App.css
React/JavaScript/: Chat.js  DarkModeToggle.js  File.js
nginx/: nginx.conf
socketchat/: package-lock.json  package.json
socketchat/src/: App.css  App.js  Chat.js  DarkModeToggle.js  File.js  Login.js
static/: index.html
